fix overflow issue, removed decimal from height px in work class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ a, a:visited {
   position: relative;
   float: left;
   width: 275px;
-  height: 217.25px;
+  height: 218px;
   margin: 20px 20px 25px 0px;
   overflow: auto;
 }
